--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -206,7 +206,7 @@ input:checked+.slider:before {
   background: #51fe7f;
 }
 .navbar-img{
-    background-image: url("https://www.desarrolloglobal.pe/aula/assets/media/misc/head_bg_sm.jpg");
+    background-image: url("https://aula.desarrolloglobal.pe/aula/assets/media/misc/head_bg_sm.jpg");
 }
 .dropdown-menu{
   margin-left: -80px;
@@ -358,7 +358,7 @@ input:checked+.slider:before {
     width: 390px !important
   }
   .navPru > .dropdown-menu {
-    margin-left: -35px;
+    margin-left: -100px;
   }
   .mostrarNav{
     display: none;
@@ -541,5 +541,7 @@ input:checked+.slider:before {
     align-items: center;
     padding: 0;
   }
-
+  .dropdown-menu.show {
+    margin: auto;
+  }
 }
