--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -233,7 +233,15 @@ input:checked+.slider:before {
   background-color: #a5dc86 !important;
   color: white !important;
 }
-
+.inputContraseña{
+  outline: none; 
+  width: 93% !important;
+  height: 40px;
+  font-size: 16px;
+}
+.inputDiv:hover{
+  outline: auto;
+}
 @media only screen and (max-width: 600px) {
   .prueba{
     display: block;
