--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -242,6 +242,10 @@ input:checked+.slider:before {
 .inputDiv:hover{
   outline: auto;
 }
+.formPago::placeholder{
+  padding-left: 2px;
+}
+
 @media only screen and (max-width: 600px) {
   .prueba{
     display: block;
