--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -245,6 +245,9 @@ input:checked+.slider:before {
 .formPago::placeholder{
   padding-left: 2px;
 }
+.top-nav-curso{
+  top: 10% !important
+}
 
 @media only screen and (max-width: 600px) {
   .prueba{
@@ -526,8 +529,6 @@ input:checked+.slider:before {
   .responseCarrito{
     width: 390px !important
   }
-
-  
 }
 
 @media only screen and (max-width: 1200px) {
@@ -555,5 +556,14 @@ input:checked+.slider:before {
   }
   .dropdown-menu.show {
     margin: auto;
+  }
+  .top-nav-curso{
+    top: 11% !important
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .top-nav-curso{
+    top: 11% !important
   }
 }
