Chat En Proceso

--- a/src/assets/PageSeminarios.css
+++ b/src/assets/PageSeminarios.css
@@ -1,3 +1,10 @@
 .margin-negativo{
     margin-top: -55px;
 }
+.color-chat1{
+    background-color: #14206B;
+}
+
+.color-chat2{
+    background-color: #4B58A5;
+}
