--- a/src/assets/PageSeminarios.css
+++ b/src/assets/PageSeminarios.css
@@ -30,7 +30,7 @@
     height: 599px;
 }
 .chatMedi{
-    height: 580px;
+    height: 680px;
     width: 100% !important;
     overflow-y: auto !important;
     overflow-x: hidden !important;
@@ -50,4 +50,8 @@
 }
 .medida2{
     height: calc(100vh - 77px - 71px);
+}
+
+.chatMedi2{
+    height: calc(100vh - 96px - 77px);
 }
