--- a/src/assets/PageSeminarios.css
+++ b/src/assets/PageSeminarios.css
@@ -4,11 +4,12 @@
 
 .color-chat1 {
     background-color: #14206B;
-    border-radius: 20px 20px 20px 0
 }
 
 .color-chat2 {
     background-color: #4B58A5;
+}
+.border-chat{
     border-radius: 20px 20px 20px 0
 }
 
@@ -32,7 +33,7 @@
     height: 599px;
 }
 .chatMedi{
-    height: 640px;
+    height: 690px;
     width: 100% !important;
     overflow-y: auto !important;
     overflow-x: hidden !important;
